--- a/vagrantfile
+++ b/vagrantfile
@@ -1,19 +1,17 @@
 Vagrant.configure("2") do |config|
-  config.vm.define "centos" do |master|
-    master.vm.box = "generic/centos8"
-    master.vm.hostname = "centos"
-
-    master.vm.network "private_network", ip: "192.168.20.100"
-    master.vm.synced_folder ".", "/vagrant", disabled: true
+  config.vm.define "centos7"
+  config.vm.box = "generic/centos7"
+  config.vm.hostname = "centos7"
+  config.vm.network "private_network", ip: "192.168.20.100"
+  config.vm.synced_folder ".", "/vagrant", disabled: true
 
   config.ssh.insert_key = false
   config.vm.provider "virtualbox" do |vb|
-   vb.name = "centos"
+   vb.name = "centos7"
    vb.gui = false
    vb.memory = "4048"
    vb.cpus = "4"
-        end
-    end
+  end
     config.vm.provision "install_awx_manage", type: "shell", path: "install_awx_manage.sh"
     config.vm.post_up_message = "Your VM is ready for use."
 end
